--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "earth",
-    "description": "Earth",
+    "name": "demojam14",
+    "description": "DemoJam14",
     "version": "0.0.1",
     "private": true,
     "author": {
-        "name": "Cameron Beccario",
-        "email": "cambecc@nullschool.net"
+        "name": "Graham Robinson",
+        "email": "graham@yelcho.com.au"
     },
-    "homepage": "https://github.com/cambecc/earth",
+    "homepage": "https://github.com/grahamrobbo/demojam14",
     "repository": {
         "type": "git",
-        "url": "git://github.com/cambecc/earth.git"
+        "url": "https://github.com/grahamrobbo/demojam14.git"
     },
     "engine": "node >= 0.10.21",
     "dependencies": {
         "when": "2.6.0",
         "swig": "1.2.2",
         "mkdirp": "0.3.5",
-        "express": "3.4.4"
+        "express": "3.4.4",
+        "express-http-proxy": "0.2.2"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
